--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -81,3 +81,8 @@ fos_user:
     from_email:
         address: "wael.fatah@esprit.tn"
         sender_name: "néé_wael"
+
+jms_payment_paypal:
+    username: your_api_username # not your account username
+    password: your_api_password # not your account password
+    signature: your_api_signature
