--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,19 +1,19 @@
 # To get started with security, check out the documentation:
 # https://symfony.com/doc/current/security.html
 security:
+    encoders:
+        FOS\UserBundle\Model\UserInterface: bcrypt
 
-    # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
+    role_hierarchy:
+        ROLE_CLIENT:       ROLE_USER
+        ROLE_AGENT:       ROLE_USER
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
+
     providers:
-        in_memory:
-            memory: ~
         fos_userbundle:
             id: fos_user.user_provider.username
 
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
         main:
             pattern: ^/
             form_login:
@@ -22,11 +22,6 @@ security:
 
             logout:       true
             anonymous:    true
-
-    role_hierarchy:
-        ROLE_CLIENT:       ROLE_USER
-        ROLE_AGENT:       ROLE_USER
-        ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
